Statictics image ready

--- a/resources/css/common.blocks/main-header/main-header.css
+++ b/resources/css/common.blocks/main-header/main-header.css
@@ -50,7 +50,7 @@
     border: none;
     background: none;
     cursor: pointer;
-    position: absolute;
+    position: absolute !important;
     top: 6px;
     right: 4px;
 }
