--- a/resources/css/common.blocks/user-text-list/user-text-list.css
+++ b/resources/css/common.blocks/user-text-list/user-text-list.css
@@ -7,3 +7,18 @@
     margin: 5px 0;
     user-select: none;
 }
+
+.user-text-list__button{
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    float: right;
+    margin-top: 3px;
+    margin-left: 3px;
+}
+
+.user-text-list__ico{
+    width: 16px;
+    display: block;
+}
