--- a/resources/css/common.blocks/main/main.css
+++ b/resources/css/common.blocks/main/main.css
@@ -228,3 +228,20 @@ div.main__textarea{
     opacity: 1; /* Показываем подсказку */
     top: 2em; /* Положение подсказки */
 }
+
+.not-found-section{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.not-found{
+    margin-top: 0px;
+    font-size: 210px;
+}
+
+.error{
+    font-size: 30px;
+}
